--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
- <div class="container jumbotron">
-   <h1>Welcome to Lin's Url Shorten Service</h1>
- </div>
+   <div class="container jumbotron">
+     <h1>Welcome to Lin's Url Shorten Service</h1>
+     <p> Feel free to turn your long ugly url into short clean one</p>
+   </div>
+
+   <div class="container">
+
+   </div>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js">
   </script>
+  <script src="/controllers/controller"></script>
 
 </body>
 </html>
