--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <title>Short Url</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/main.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
    <div class="container jumbotron">
